# EmbededSys

./: .gitignore  00-review.c  01-dashuchixiaoshu.c  02-xor.cpp  03-recur-iter.cpp  04-constpointer.cpp  05-arrpointer.cpp  06-数组初始化.cpp  07-指针强制类型转换.c  08-字符数组与字符指针.cpp  09-结构体.c  10-自引用结构体.c  11-input-output.cpp  12-显示位数据.cpp  CMakeLists.txt  algorithm.cpp  algorithm.h  define.h  hello.c  test.c  test.cpp  xfunc.cpp  xfunc.h
